--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "typed-props",
+  "version": "0.3.7",
+  "description": "Facebook's PropTypes standalone extensible implementation for browser and server",
   "main": "src/index.js",
   "scripts": {
     "build": "npm run build:dev && npm run build:prod",
     "build:dev": "webpack",
     "build:prod": "NODE_ENV=production webpack",
-    "test": "mocha test/**.spec.js"
+    "test": "mocha test/**.spec.js",
+    "prepublish": "npm run build"
   },
   "license": "MIT",
   "devDependencies": {
@@ -17,8 +20,6 @@
     "should": "^11.2.1",
     "webpack": "^2.5.1"
   },
-  "version": "0.3.6",
-  "description": "Facebook's PropTypes standalone extensible implementation for browser and server",
   "directories": {
     "test": "test"
   },
@@ -26,7 +27,6 @@
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
     "should": "^11.2.1",
     "webpack": "^2.5.1"
   },
