[utils] remove node v4 and add latset node into travis config, add node version into package.json

--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "type": "git",
     "url": "git+https://github.com/rumkin/typed-props.git"
   },
+  "engines": {
+    "node": ">=0.6.0"
+  },
   "keywords": [
     "saga",
     "sagas",
