--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typed-props",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "Facebook's PropTypes standalone extensible implementation for browser and server",
   "main": "src/index.js",
   "scripts": {
@@ -23,13 +23,7 @@
   "directories": {
     "test": "test"
   },
-  "dependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-preset-es2015": "^6.24.1",
-    "should": "^11.2.1",
-    "webpack": "^2.5.1"
-  },
+  "dependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rumkin/typed-props.git"
