--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "typed-props",
-  "version": "0.8.1",
+  "version": "0.8.2",
   "description": "Facebook's PropTypes standalone extensible implementation for browser and server",
   "main": "src/index.js",
   "scripts": {
     "build": "npm run build:dev && npm run build:prod",
     "build:dev": "webpack",
     "build:prod": "NODE_ENV=production webpack",
+    "cov": "istanbul cover node_modules/mocha/bin/_mocha -- -u exports -R spec test/**.spec.js",
     "test": "mocha test/**.spec.js",
     "prepublish": "npm run build"
   },
@@ -16,6 +17,7 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "istanbul": "^0.4.5",
     "mocha": "^3.4.1",
     "should": "^11.2.1",
     "webpack": "^2.5.1"
