--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,13 @@
     "node": true,
     "es6": true
   },
+  "parserOptions": {
+    "sourceType": "module",
+    "ecmaVersion": 8,
+    "ecmaFeatures": {
+      "experimentalObjectRestSpread": true
+    }
+  },
   "rules": {
     "block-scoped-var": 2,
     "brace-style": [2, "stroustrup"],
@@ -11,14 +18,18 @@
     "eol-last": 2,
     "eqeqeq": [2, "smart"],
     "max-depth": [1, 3],
-    "max-statements": [1, 25],
-    "max-len": [1, 80],
+    "max-statements": [1, 40],
+    "max-len": 0,
     "new-cap": 0,
     "no-extend-native": 2,
     "no-mixed-spaces-and-tabs": 2,
+    "no-multiple-empty-lines": [2, {max: 1}],
     "no-trailing-spaces": 2,
-    "no-use-before-define": [2, "nofunc"],
+    "no-use-before-define": 0,
+    "no-undefined": 2,
+    "no-undef": 2,
     "no-unused-vars": 1,
+    "indent": [2, 2, { "MemberExpression": 0 }],
     "quotes": [2, "single", "avoid-escape"],
     "semi": [2, "always"],
     "keyword-spacing": [2, {"before": true, "after": true}],
