--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
   "name": "typed-props",
-  "version": "0.10.5",
+  "version": "1.0.0",
   "description": "Facebook's PropTypes standalone extensible implementation for browser and server",
-  "main": "src/index.js",
+  "main": "dist/node/index.js",
+  "types": "dist/node/index.d.ts",
   "scripts": {
-    "build": "npm run build:dev && npm run build:prod",
-    "build:dev": "webpack",
-    "build:prod": "NODE_ENV=production webpack",
-    "cov": "istanbul cover node_modules/mocha/bin/_mocha -- -u exports -R spec test/**.spec.js",
+    "build": "npm run build:web && npm run build:node",
+    "build:node": "tsc --module commonjs --outDir dist/node",
+    "build:web": "npm run build:compile && npm run build:concat && npm run build:minify && rm -rf dist/src",
+    "build:compile": "tsc --module esnext --target esnext",
+    "build:concat": "rollup dist/src/index.js --format umd --name TypedProps --file dist/typed-props.js",
+    "build:minify": "babel-minify dist/typed-props.js -o dist/typed-props.min.js",
+    "clean": "rm -rf dist",
     "test": "mocha test/index.js",
-    "prepublish": "npm run build",
+    "prepublish": "npm run clean && npm run build",
     "shasum": "bash -c 'for file in $@; do shasum -b -a 384 $file | xxd -r -p | base64; done' -- "
   },
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "istanbul": "^0.4.5",
-    "mocha": "^3.4.1",
+    "babel-minify": "^0.5.0",
+    "mocha": "^6.0.2",
+    "rollup": "^1.7.3",
     "should": "^11.2.1",
-    "webpack": "^2.5.1"
+    "terser": "^3.17.0",
+    "typescript": "^3.3.4000",
+    "uglifyjs": "^2.4.11"
   },
   "directories": {
     "test": "test"
