--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "main": "dist/node/index.js",
   "types": "dist/node/index.d.ts",
   "scripts": {
-    "build": "npm run build:web && npm run build:node",
+    "build": "npm run build:web && npm run build:node && npm run build:shasum",
     "build:node": "tsc --module commonjs --outDir dist/node",
     "build:web": "npm run build:compile && npm run build:concat && npm run build:minify && rm -rf dist/src",
     "build:compile": "tsc --module esnext --target esnext",
     "build:concat": "rollup dist/src/index.js --format umd --name TypedProps --file dist/typed-props.js",
     "build:minify": "babel-minify dist/typed-props.js -o dist/typed-props.min.js",
+    "build:shasum": "bash -c 'for file in $@; do echo `shasum -b -a 384 $file | xxd -r -p | base64` $file >> dist/shasum.txt; done' --",
     "clean": "rm -rf dist",
     "test": "mocha test/index.js",
-    "prepublish": "npm run clean && npm run build",
-    "shasum": "bash -c 'for file in $@; do shasum -b -a 384 $file | xxd -r -p | base64; done' -- "
+    "prepublish": "npm run clean && npm run build"
   },
   "license": "MIT",
   "devDependencies": {
