--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "mocha": "^6.0.2",
     "rollup": "^1.7.3",
     "should": "^11.2.1",
-    "terser": "^3.17.0",
-    "typescript": "^3.3.4000",
-    "uglifyjs": "^2.4.11"
+    "typescript": "^3.3.4000"
   },
   "directories": {
     "test": "test"
