--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "clean": "rm -rf dist",
     "cov": "nyc -t coverage --reporter=html mocha test",
     "test": "mocha test",
-    "prepublish": "npm run clean && npm run build"
+    "prepublish": "allow-publish-tag next && npm run clean && npm run build"
   },
   "license": "MIT",
   "devDependencies": {
+    "allow-publish-tag": "^1.0.1",
     "babel-minify": "^0.5.0",
     "mocha": "^6.0.2",
     "nyc": "^13.3.0",
