--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "typed-props",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Facebook's PropTypes standalone extensible implementation for browser and server",
   "main": "dist/node/index.js",
-  "types": "dist/node/index.d.ts",
+  "types": "dist/types/",
   "scripts": {
     "build": "npm run build:web && npm run build:node && npm run build:checksum -- dist/*.js",
     "build:node": "tsc --module commonjs --outDir dist/node",
